--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "1.6.5",
     "cheerio": "1.0.0-rc.12",
     "express": "4.18.2",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "scrap": "file:"
   }
 }
